prometheus/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-grafana
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: PathPrefix(`/grafana`)
    services:
    - name: prometheus-grafana
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-kube-prometheus-prometheus
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: PathPrefix(`/prometheus`)
    middlewares:
    - name: prometheus-stripprefix
    services:
    - name: prometheus-kube-prometheus-prometheus
      port: 9090
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-alertmanager
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: PathPrefix(`/alertmanager`)
    middlewares:
    - name: prometheus-stripprefix
    services:
    - name: prometheus-kube-prometheus-alertmanager
      port: 9093
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-lt-kube-prometh-prometheus
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: PathPrefix(`/prometheus-lt`)
    middlewares:
    - name: prometheus-stripprefix
    services:
    - name: prometheus-lt-kube-prometh-prometheus
      port: 9090
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: prometheus-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /prometheus-lt
      - /prometheus
      - /alertmanager
